--- a/test-task/src/app/notes-list/notes-list.component.scss
+++ b/test-task/src/app/notes-list/notes-list.component.scss
@@ -29,3 +29,46 @@
         }
     }
 }
+
+.filter-tags-wrapper {
+    background-color: whitesmoke;
+    padding: 0.5rem 1.5rem 0 1.5rem;
+}
+
+.filter-tag {
+    display: inline-flex;
+    padding: 7px 12px;
+    border-radius: 16px;
+    align-items: center;
+    cursor: default;
+    min-height: 32px;
+    height: 1px;
+    background-color: #e0e0e0;
+    color: rgba(0, 0, 0, 0.87);
+    margin: 0.3rem;
+    &-btn {
+        cursor: pointer;
+        display: flex;
+        padding: 0;
+        margin-left: 0.5rem;
+        &:hover .filter-tag-icon {
+            color: #fc7373;
+        }
+    }
+    &-icon {
+        color: #c0c0c0;
+        width: 18px;
+        height: 18px;
+        font-size: 18px;
+        transition: all .3s;
+    }
+}
+
+.delete-btn {
+    cursor: pointer;
+    transition: all .3s;
+
+    &:hover {
+        color: rgb(254, 109, 109);
+    }
+}
