--- a/test-task/src/app/note-item/note-item.component.html
+++ b/test-task/src/app/note-item/note-item.component.html
@@ -1,6 +1,8 @@
 <mat-card class="note-wrapper">
     <p class="note-text">{{ text | removeHash }}</p>
     <mat-chip-list class="note-tags">
-        <mat-basic-chip class="note-tag" disableRipple="true" *ngFor="let tag of tags">{{ tag }}</mat-basic-chip>
+        <mat-basic-chip class="note-tag" disableRipple="true" *ngFor="let tag of tags">{{
+            tag | removeHash
+        }}</mat-basic-chip>
     </mat-chip-list>
 </mat-card>
