--- a/test-task/src/app/note-item/note-item.component.scss
+++ b/test-task/src/app/note-item/note-item.component.scss
@@ -25,3 +25,9 @@
     color: rgba(0, 0, 0, 0.87);
     margin: 0.3rem;
 }
+
+@media (max-width:400px) {
+    .note-wrapper {
+        width: 12rem;
+    }
+}
