--- a/test-task/src/app/notes-list/notes-list.component.scss
+++ b/test-task/src/app/notes-list/notes-list.component.scss
@@ -9,6 +9,7 @@
 
 .form {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     padding: 1.5rem 1.5rem 0 1.5rem;
     background-color: whitesmoke;
@@ -72,3 +73,9 @@
         color: rgb(254, 109, 109);
     }
 }
+
+// @media (max-width:600px) {
+//     .form {
+//         flex-direction: column;
+//     }
+// }
